MAI fix navbar and footer width on mobile

--- a/components/core/layout/layout.module.css
+++ b/components/core/layout/layout.module.css
@@ -43,7 +43,7 @@
       "footer";
     width: 100%;
   }
-  .sidebar {
+  .sidebar .navbar {
     width: 100%;
     margin: 0;
   }
